@@ -111,6 +111,7 @@
 \input{./wiki_tex/interface_logiciel}
 \input{./wiki_tex/gui_soft_welcome}
 \input{./wiki_tex/gui_soft_conf}
+\input{./wiki_tex/gui_soft_conf_alarme}
 \input{./wiki_tex/gui_soft_logs}
 \input{./wiki_tex/gui_soft_prog}
 \input{./wiki_tex/gui_soft_prog_regul}
@@ -123,7 +124,6 @@
 \input{./wiki_tex/gui_soft_cal_lunar}
 \input{./wiki_tex/gui_soft_cal_engrais}
 \input{./wiki_tex/gui_soft_wizard}
-\input{./wiki_tex/gui_soft_historic}
 \input{./wiki_tex/gui_box}
 \input{./wiki_tex/gui_box_start}
 \input{./wiki_tex/gui_box_main}
